[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
